--- a/content.tex
+++ b/content.tex
@@ -7,7 +7,7 @@
 
 В области разработки систем обучения и автоматизации образовательных процессов возникает необходимость в сборе, агрегации, гармонизации и повторном использовании учебных материалов различных образовательных ресурсов в контексте одной системы электронного обучения. В настоящее время повторное использование учебных материалов сетевых образовательных ресурсов является одним из наиболее перспективных подходов для разработки систем электронного обучения. Разработка методик агрегации данных позволит создавать распределенные системы электронного обучения, использующие учебные материалы из различных образовательных ресурсов университетов, библиотек и организаций.
 
-Одним из методов реализации повторного использования учебных материалов в системах электронного обучения является применение семантических технологий. Технологии семантических сетей (Semantic Web) и связанных данных (Linked Data) позволяют системам обмениваться данными в сети с использованием онтологий и уникальных идентификаторов ресурсов URI (Uniform Resource Identifier). Системы, используя данные технологии, могут интегрировать и адаптировать данные из сторонних источников. Семантические технологии широко используются в образовательных ресурсах в большинстве развитых стран. Наиболее известным проектом в области связанных данных является инициатива Linked Universities. Linked Universities является альянсом европейских университетов распространяющих свои данные, программы, курсы и учебные материалы в формате Linked Data. Другим успешным примером использования семантических технологий в системе электронного обучения является Open University. Open University является исследовательским университетом электронного обучения с более чем 240 тысячами студентов. Семантические технологии используются в прикладных образовательных системах. Одной из таких систем является система SlideWiki - система управления обучением, позволяющая составлять курсы на основе презентаций. Платформа реализует возможность повторного использования данных созданных курсов при составлении нового учебного курса.
+Одним из методов реализации повторного использования учебных материалов в системах электронного обучения является применение семантических технологий. Технологии семантических сетей (Semantic Web) и связанных данных (Linked Data) позволяют системам обмениваться данными в сети с использованием онтологий и уникальных идентификаторов ресурсов URI (Uniform Resource Identifier). Системы, используя данные технологии, могут интегрировать и адаптировать данные из сторонних источников. Семантические технологии широко используются в образовательных ресурсах в большинстве развитых стран. Наиболее известным проектом в области связанных данных является инициатива Linked Universities. Linked Universities является альянсом европейских университетов распространяющих свои курсы и учебные материалы в формате Linked Data. Другим успешным примером использования семантических технологий в системе электронного обучения является Open University. Open University является исследовательским университетом электронного обучения с более чем 240 тысячами студентов. Семантические технологии используются в прикладных образовательных системах. Одной из таких систем является система SlideWiki - система управления обучением, позволяющая составлять курсы на основе презентаций. Платформа реализует возможность повторного использования данных созданных курсов при составлении нового учебного курса.
 
 Автоматизация сбора, агрегации и гармонизации учебных материалов сетевых образовательных ресурсов в системе электронного обучения позволяет поддерживать содержание образовательного процесса в актуальном состоянии. Пользователям системы предоставляются как одобренные и проверенные учебные материалы, так и материалы из открытых, общедоступных источников. При росте объемов учебных материалов и автоматизации наполнения системы электронного обучения возникает необходимость в контроле качества и целостности учебных курсов и программ. Семантические технологии позволяют формально описывать структуру и связи объектов образовательного процесса. На основе этих связей может быть разработана методика анализа качества учебного курса. 
 
@@ -62,40 +62,27 @@ International Conference on Knowledge Engineering and Semantic Web (Россия
 11th Extended Semantic Web Conference (Греция, Аниссарас, 2014), International Conference on Knowledge Engineering and Semantic Web (Россия, Казань, 2013), The 13th International Semantic Web Conference (Италия, Рива-дель-Гарда, 2014), 16th Conference of Open
 Innovations Association FRUCT (Финляндия, Оулу, 2014).
 
-%Диссертационная работа была выполнена при поддержке грантов ...
+\textbf{Публикации.} Основные результаты по теме диссертации изложены в 6 печатных изданиях, 1 из которых изданы в журналах, рекомендованных ВАК, 5 в тезисах докладов.
 
-%\textbf{Личный вклад.} Автор принимал активное участие ...
-
-\textbf{Публикации.} Основные результаты по теме диссертации изложены в ХХ печатных изданиях, Х из которых изданы в журналах, рекомендованных ВАК, ХХ --- в тезисах докладов.
-
-%\underline{\textbf{Объем и структура работы.}} Диссертация состоит из~введения, четырех глав, заключения и~приложения. Полный объем диссертации \textbf{ХХХ}~страниц текста с~\textbf{ХХ}~рисунками и~5~таблицами. Список литературы содержит \textbf{ХХX}~наименование.
+\textbf{Объем и структура работы.} Диссертация состоит из введения, четырех глав, заключения и приложения. Полный объем диссертации \textbf{110} страниц текста с \textbf{20} рисунками и \textbf{6} таблицами. Список литературы содержит \textbf{65} наименование.
 
 %\newpage
 \subsection*{\Large Содержание работы}
 Во \textbf{введении} обосновывается актуальность исследований, проводимых в рамках данной диссертационной работы, приводится обзор научной литературы по изучаемой проблеме, формулируется цель, ставятся задачи работы, сформулированы научная новизна и практическая значимость представляемой работы.
 
-\textbf{Первая глава} посвящена обзору использования семантических технологий для автоматизации процессов в системах электронного обучения. В главе производится классификация систем электронного обучения и приводится краткая история этапов их развития. На основе анализа отечественных и зарубежных систем электронного обучения и образовательных ресурсов были сформированы имеющиеся проблемы в области дистанционного образования. В данный момент в системах электронного образования отсутствуют механизмы автоматической аггрегации и анализа образовательных данных с использованием открытых образовательных ресурсов. Отсутствие семантического содержания в данных систем электронного образования значительно снижает возможности проведения анализа данных на основе косвенно выводимых фактов.
+\textbf{Первая глава} посвящена обзору использования семантических технологий для автоматизации процессов в системах электронного обучения. В главе производится классификация систем электронного обучения и приводится краткая история этапов их развития. На основе анализа отечественных и зарубежных систем электронного обучения и образовательных ресурсов были сформированы имеющиеся проблемы в области дистанционного образования. В данный момент в системах электронного обучения отсутствуют механизмы автоматической агрегации и анализа образовательных данных с использованием открытых образовательных ресурсов. Отсутствие семантического содержания в данных систем электронного обучения значительно снижает возможности проведения анализа данных на основе косвенно выводимых фактов.
 
-Далее в главе производится анализ исследовательских работ по сформированным проблемам. В главе производится анализ применения семантических технологий в образовательных системах. Последние исследования показывают, что использование семантических технологий и концепции связанных данных позволяет автоматизировать наполнение системы определенными данными из открытых источников. Семантические технологии в системе электронного обучения позволяют решить такие проблемы как наполнение системы учебными материалами, поддержка актуальности учебных материалов, оценка качества учебного курса, автоматизация проверки знаний студентов.  
+Далее в главе производится анализ исследовательских работ по сформированным проблемам. В главе производится анализ применения семантических технологий в образовательных системах. Последние исследования показывают, что использование технологий Semantic Web и Linked Data позволяет автоматизировать наполнение системы определенными данными из открытых источников. Семантические технологии в системе электронного обучения позволяют решить такие проблемы, как наполнение и поддержка актуальности учебных материалов в системе, оценка качества учебного курса, автоматизация проверки знаний студентов.  
 
-\textbf{Вторая глава} посвящена теоретическим основам онтологий, семантических технологий и технологий Linked Data. В главе раскрываются понятия онтологии, экспертной системы, базы знаний и семантической сети. Так же в главе приводится описание основных стандартов, протоколов и форматов хранения данных в семантических технологиях. В конце главы описаны принципы публикации данных в формате Linked Data.
+\textbf{Вторая глава} посвящена теоретическим основам онтологий, семантических технологий и концепции Linked Data. В главе раскрываются понятия онтологии, экспертной системы, базы знаний и семантической сети. Также в главе приводится описание основных стандартов, протоколов и форматов хранения данных в семантических технологиях. В конце главы описаны принципы публикации данных в формате Linked Data.
 
 
 Онтология - термин, заимствованный из философии, который обозначает науку, описывающую формы бытия и то, как они относятся между собой. Иными словами онтология - это явное описание концептуализации. Основными структурными элементами языка онтологий являются понятия класса, индивида и свойства. Онтологии в общем виде определяемые как совместно используемые формальные концептуализации конкретных предметных областей, дают общее представление о темах, информацией по которым могут обмениваться люди и приложения. Назначением экспертных систем является автоматизация деятельности человека. Ядром экспертной системы является база знаний. База знаний является совокупностью  знаний предметной области, записанной на машинный носитель в форме, понятной эксперту и пользователю.
 
 % подробнее про семантик веб
-Семантическая сеть является  методом представления знаний и позволяет описывать объекты, явления и понятия предметной области с помощью теории графов. Характерной особенностью семантических сетей является обязательное наличие трех типов отношений: класс, свойство и экземпляр класса. Главной целью семантической сети является хранение мировой информации в виде пригодном для машинной обработки. Основной моделью описания данных в семантической сети является модель RDF(Resource Description Framework).  RDF представляет утверждения о ресурсах в виде триплетов. Триплет состоит из субъекта, предиката и объекта. Субъект, объект и предикат определяются с помощью URI. Существует множество форматов представления и хранения данных RDF, таких как XML и N-Triples. Для описания синтаксиса классов объектов используется язык описания онтологий OWL (Ontology Web Language). OWL позволяет явно описывать свойства и классы: наследование классов, характеристики свойств, мощность связей и эквивалентность. Для произведения запросов к семантическим данным используется протокол SPARQL (SPARQL Protocol and RDF Query Language). SPARQL позволяет получать доступ к данным в формате RDF через стандартизированный интерфейс и запрашивать данные с помощью стандартного языка запросов. Организация SPARQL точки доступа к данным позволяет пользователям и приложениям получать данные из базы знаний.
+Семантическая сеть является  методом представления знаний и позволяет описывать объекты, явления и понятия предметной области с помощью теории графов. Характерной особенностью семантических сетей является обязательное наличие трех типов отношений: класс, свойство и экземпляр класса. Главной целью семантической сети является хранение мировой информации в виде пригодном для машинной обработки. Основной моделью описания данных в семантической сети является модель RDF(Resource Description Framework).  RDF представляет утверждения о ресурсах в виде триплетов. Триплет состоит из субъекта, предиката и объекта. Субъект, объект и предикат определяются с помощью URI. Существует множество форматов представления и хранения данных RDF таких, как XML и N-Triples. Для описания синтаксиса классов объектов используется язык описания онтологий OWL (Ontology Web Language). OWL позволяет явно описывать свойства и классы: наследование классов, характеристики свойств, мощность связей и эквивалентность. Для произведения запросов к семантическим данным используется протокол SPARQL (SPARQL Protocol and RDF Query Language). SPARQL позволяет получать доступ к данным в формате RDF через стандартизированный интерфейс и язык запросов. Организация SPARQL точки доступа к данным позволяет пользователям и приложениям получать данные из базы знаний.
 
-Концепция Linked Data предполагает использование Web-технологий HTTP, RDF, и URI для публикации данных в сети и объединения данных из разных источников. Данная концепция позволяет данным из одного источника ссылаться на данные другого источника. Основными принципами публикации данных с использованием Linked Data являются:
-
-\begin{itemize}
-\item все элементы определяются по средствам URI;
-\item для всех URI возможно их разыменование, по URI возможно получение доступа к элементу;
-\item переход по URI ведет к получению больших данных об элементе;
-\item ссылки на другие источники данных необходимо включать в свои наборы для возможности проведения дальнейшей навигации по данным вне одного ресурса;
-\end{itemize}
-
-В данный момент опубликованные наборы связанных данных охватывают информацию о географических локациях, людях, компаниях, книгах, научных публикациях, фильмах, музыке, телевидении и радио, лекарствах, генах и о многом другом.
+Концепция Linked Data предполагает использование Web-технологий HTTP, RDF, и URI для публикации данных в сети и объединения данных из разных источников. Данная концепция позволяет данным из одного источника ссылаться на данные другого источника. В соответствии с концепцией все элементы определяются по средствам URI и переход по URI ведет к получению большего количества данных об элементе. Наборы данных должны включать в себя ссылки на другие источники для возможности проведения дальнейшей навигации по данным вне одного ресурса. В данный момент опубликованные наборы связанных данных охватывают информацию о географических локациях, людях, компаниях, книгах, научных публикациях, фильмах, музыке, телевидении и радио, лекарствах, генах и о многом другом.
 
 \textbf{Третья глава} посвящена разработке онтологической модели для описания учебных материалов и образовательного процесса, исследованию методов автоматического агрегирования образовательных данных и разработке методов и подходов к автоматизированной оценке качества учебных курсов и результатов обучения студентов.  
 
@@ -124,7 +111,7 @@ Innovations Association FRUCT (Финляндия, Оулу, 2014).
 % Показать схему онтологии
 % Привести выходные данные
 
-В продолжении главы описывается разработанная методика по агрегации и гармонизации учебных материалов в системе электронного обучения. Технологии Semantic Web и Linked Data позволяют использовать онтологии для хранения, сбора и распространения данных. Одним из преимуществ данных технологий является повторное использование данных. В Интернете существует множество открытых источников с данными, при описании которых были использованы онтологии верхнего уровня. Данные источники могут быть использованы для наполнения системы электронного обучения. Для сбора и интеграции данных в системе электронного обучения предлагается использовать провайдеры данных. Провайдеры данных это программные модули  поддерживают автоматическое обновление связных данных из открытых источников, используя определенный алгоритм. Провайдеры позволяют преобразовывать структурированные данных различных форматов в формат RDF. Каждый провайдер обладает своим контекстом для дальнейшего управления собранными данными. В результате исследования был сформирован следующий набор методов агрегации данных:
+В продолжении главы описывается разработанная методика по агрегации и гармонизации учебных материалов в системе электронного обучения. Технологии Semantic Web и Linked Data позволяют использовать онтологии для хранения, сбора и распространения данных. Одним из преимуществ данных технологий является повторное использование данных. В Интернете существует множество открытых источников с данными, при описании которых были использованы онтологии верхнего уровня. Данные источники могут быть использованы для наполнения системы электронного обучения. Для сбора и интеграции данных в системе электронного обучения предлагается использовать провайдеры данных. Провайдеры данных -- это программные модули, поддерживающие автоматическое обновление связных данных из открытых источников, используя определенные алгоритмы. Провайдеры позволяют преобразовывать структурированные данных различных форматов в формат RDF. Каждый провайдер обладает своим контекстом для дальнейшего управления собранными данными. В результате исследования был сформирован следующий набор методов агрегации данных:
 
 \begin{itemize}
 \item интеграция связанных данных из открытых источников в формате RDF на примере связывания учебных курсов с данными электронной библиотеки BNB;
@@ -134,20 +121,20 @@ Innovations Association FRUCT (Финляндия, Оулу, 2014).
 \item применение методов обработки естественного языка для создания дополнительных связей между объектами на примере связывания предметных терминов с заданиями учебных тестов.
 \end{itemize}
 
-Особое внимание в главе уделяется применению методов обработки естественного языка для гармонизации объектов в онтологии. Для наполнения онтологий системы можно использовать не только данные внешних источников, но и данные самой системы. Данные хранящиеся в онтологии системы и связанные семантическими связями позволяют создавать новые связи на основе предопределенных правил. Используя методы обработки естественного языка можно извлекать семантические связи из текстовой информации объекта онтологии. В исследовании данные методы использовались для выявления связей между предметными терминами и заданиями теста. В задании в тексте вопроса и его ответов производился поиск предметных терминов. Найденные термины связывались с заданиями теста. Данные связи обозначали использование предметного термина в задании учебного теста и позволяли формально описать содержание задания. 
+Особое внимание в главе уделяется применению методов обработки естественного языка для гармонизации объектов в онтологии. Для наполнения онтологий системы можно использовать не только данные внешних источников, но и данные самой системы. Данные, хранящиеся в онтологии системы, позволяют создавать новые связи на основе предопределенных правил. Используя методы обработки естественного языка, можно извлекать семантические связи из текстовой информации объекта онтологии. В исследовании данные методы использовались для выявления связей между предметными терминами и заданиями теста. В тексте вопроса задания и его ответов производился поиск предметных терминов. Найденные термины связывались с заданиями теста. Данные связи обозначали использование предметного термина в задании учебного теста и позволяли формально описать содержание задания. 
 
 Для реализации алгоритма связывания заданий тестов и предметных терминов был разработан провайдер данных. Провайдер принимает на вход ссылку на объект курса и производит создание ссылок между заданиями и терминами. Для извлечения терминов была использована лингвистическая платформа NooJ. Общий алгоритм работы провайдера данных представлен на рисунке \ref{fig:NLPAlgo}.
 
 \begin{figure}[ht] 
   \center
   \includegraphics[scale=0.45]{NLPAlgo}
-  \caption{Алгоритм работы провайдера извлечения терминов с использованием методов обработки естественного языка} 
+  \caption{Алгоритм работы провайдера данных для извлечения терминов с использованием методов обработки естественного языка} 
   \label{fig:NLPAlgo}
 \end{figure}
 
 Термины-кандидаты, для которых не были найдены соответствующие предметные термины системы, могут быть записаны в онтологию, как новые предметные термины системы. Перед записью в онтологию провайдер производит проверку термина-кандидата на соответствие предметному термину. Для проверки используются запросы к базе знаний DBpedia. Для включения нового термина в систему необходима верификация преподавателя или администратора системы. 
 
-Далее в главе описывается разработка методов анализа качества и полноты учебного курса. Метод основан на анализе косвенных связей в онтологии системы. Аналитика формируется из статистических данных, полученных с помощью SPARQL запросов. 
+Далее в главе описывается разработка метода анализа качества и полноты учебного курса. Метод основан на анализе косвенных связей в онтологии системы. Аналитика формируется из статистических данных, полученных с помощью SPARQL запросов. 
 
 Одним из примеров использования метода является анализ покрытия лекций курса тестами и заданиями. В онтологии системы лекции и тесты связаны с определенным модулем курса. В результате работы алгоритмов по наполнению онтологий лекции и задания тестов могут быть связаны с определенными предметными терминами. Таким образом, происходит косвенное связывание лекций и тестов через предметные термины. Если термин лекции использован в задании теста, он считается покрытым в данном модуле учебного курса.
 
@@ -189,9 +176,9 @@ Innovations Association FRUCT (Финляндия, Оулу, 2014).
 \end{itemize}
 
 
-В конце главы описывается новый подход к автоматизированному анализу знаний и рейтингов студентов системы электронного обучения с использованием статистических методов и семантических технологий. Данный подход позволяет студентам получать информацию о своих знаниях по предметным терминам и предметным областям учебных дисциплин в режиме реального времени. Такая информация может использоваться студентами для выявления пробелов в знаниях и при повторении пройденных учебных материалов. В дальнейшем развитии подхода информация о знаниях и результатах позволит формировать рекомендации для студентов по образовательным программам и исследовательским проектам и лабораториям. Преподаватели смогут использовать информацию о знаниях и результатах студентов во время подготовки к проведению учебного курса и лекций у определенной группы студентов.
+В конце главы описывается новый подход к автоматизированному анализу знаний и рейтингов студентов системы электронного обучения с использованием статистических методов и семантических технологий. Данный подход позволяет студентам получать информацию о своих знаниях по предметным терминам и предметным областям учебных дисциплин в режиме реального времени. Такая информация может использоваться студентами для выявления пробелов в знаниях и при повторении пройденных учебных материалов. В дальнейшем развитии подхода информация о знаниях и результатах позволит формировать рекомендации для студентов по образовательным программам, исследовательским проектам и лабораториям. Преподаватели смогут использовать информацию о знаниях и результатах студентов во время подготовки к проведению учебного курса и лекций у определенной группы студентов.
 
-Подход основан на семантическом анализе действий студентов в системе электронного обучения в проекции образовательного процесса и учебных материалов. Целью подхода является автоматизированный вывод рейтинга знаний студентом определенной предметной области учебной дисциплины. Рейтинг знания предметной области зависит от рейтингов входящих в нее предметных терминов. Расчет рейтинга знания предметного термина зависит от метрик оценки действий студента в системе. Набор метрик может варьироваться в зависимости от возможных действий студентов в системе, структуры онтологии и необходимой точности вычислений. В предложенном подходе используются метрики: метрика знакомства с термином и метрика проверки знания термина с помощью тестов. Расчет рейтинга знаний предметной области производится с учетом значения предметных терминов в образовательном процессе.
+Подход основан на семантическом анализе действий студентов в системе электронного обучения в проекции образовательного процесса и учебных материалов. Целью подхода является автоматизированный вывод рейтинга знаний студентом определенной предметной области учебной дисциплины. Рейтинг знания предметной области зависит от рейтингов входящих в нее предметных терминов. Расчет рейтинга знания предметного термина зависит от метрик оценки действий студента в системе. Набор метрик может варьироваться в зависимости от возможных действий студентов в системе, структуры онтологии и необходимой точности вычислений. В предложенном подходе используются метрики: метрика знакомства с термином и метрика проверки знания термина с помощью тестов. Расчет рейтинга знаний предметной области производится с учетом значения(важности) предметных терминов в образовательном процессе.
 
 Рейтинг знания термина, как и рейтинг знания предметной области, варьируется от 0 до 1. Метрика знакомства с термином является бинарной метрикой и обозначает факт изучения студентом предметного термина с использованием теоретического материала. В разработанном подходе изучением предметного термина является завершение студентом лекции связанной с данным термином в системе электронного обучения. Изучить предметный термин студент может только один раз. В разработанном подходе данная метрика составляет 15\% от общего рейтинга знаний предметного термина.
 
@@ -203,13 +190,13 @@ $$
 
 где \(z_{1-\alpha/2}\) - квантиль от от \(1-\alpha/2\) стандартного нормального распределения, \(p\) - доля правильных ответов, \(n\) - общее количество ответов. 
 
-Сумма двух полученных метрик для предметного термина в соответствии с их долями является общим рейтингом знания предметного термина. Предметные области и предметные термины в соответствии с разработанной моделью не зависят от учебных материалов и могут повторно использоваться во множестве учебных курсов. Связи между терминами описывающие необходимость одного термина для изучения другого позволяют рассчитать важность предметного термина в образовательном процессе. Чем больше предметных терминов, для изучения которых необходим определенный термин тем выше значение данного термина. При расчете учитывается количество терминов на разных уровнях зависимости. Уровнем зависимости является глубина косвенной зависимости одного термина от другого через набор терминов. Например, на втором уровне зависимости находятся термины, зависимые от предметных терминов зависимых от рассматриваемого предметного термина. Значение термина рассчитывается с использованием трех уровней зависимости по формуле: 
+Сумма двух полученных метрик для предметного термина в соответствии с их долями является общим рейтингом знания предметного термина. Предметные области и предметные термины в соответствии с разработанной моделью не зависят от учебных материалов и могут повторно использоваться во множестве учебных курсов. Связи между терминами, описывающие необходимость одного термина для изучения другого, позволяют рассчитать значение предметного термина в образовательном процессе. Чем больше предметных терминов, для изучения которых необходим определенный термин, тем выше значение данного термина. При расчете учитывается количество терминов на разных уровнях зависимости. Уровнем зависимости является глубина косвенной зависимости одного термина от другого через набор терминов. Например, на втором уровне зависимости находятся термины, зависимые от предметных терминов, зависимых от рассматриваемого предметного термина. Значение термина рассчитывается с использованием трех уровней зависимости по формуле: 
 
 $$
     W_t = \frac{1}{e}+\sum_{k=1}^{3}\frac{n_k}{e^k}, 
 $$
 
-где \(n\) - количество терминов связанных с данным термином на каждом уровне зависимости, \(k\) - номер зависимого уровня, \( \frac{1}{e} \) - константное значение термина. 
+где \(n\) - количество терминов, связанных с данным термином на каждом уровне зависимости, \(k\) - номер зависимого уровня, \( \frac{1}{e} \) - константное значение термина. 
 
 Итоговый рейтинг знания студентом предметной области учебной дисциплины рассчитывается как сумма рейтингов предметных терминов, входящих в предметную область. При расчете необходимо учитывать относительное значение термина в предметной области. Для этого необходимо рассчитать суммарное значение предметной области, используя формулу:
 
@@ -232,9 +219,9 @@ $$
 $$
     R_f = \sum_{n=1}^{\infty} R_tD_t,
 $$
-где \(R_t\) рейтинг термина, \(D_t\) - относительное значение термина в предметной области.
+где \(R_t\) - рейтинг термина, \(D_t\) - относительное значение термина в предметной области.
 
-Представленный подход позволяет производить автоматизированную оценку знания студентами предметных областей. Поддержка набора метрик позволяет системе варьировать алгоритмы расчета оценки, добавляя, изменяя и удаляя необходимые метрики. Помимо оценки предметных областей данный подход можно применять к любым объектам образовательного процесса напрямую или косвенно связанным с предметными терминами. Подход позволяет производить оценку учебных курсов и специальностей.  
+Представленный подход позволяет производить автоматизированную оценку знания студентами предметных областей. Поддержка набора метрик позволяет системе варьировать алгоритмы расчета оценки, добавляя, изменяя и удаляя необходимые метрики. Помимо оценки предметных областей данный подход можно применять к любым объектам образовательного процесса, напрямую или косвенно связанным с предметными терминами. Подход позволяет производить оценку учебных курсов и специальностей.  
 
 В \textbf{четвертой главе} приведено описание архитектуры и особенности реализации программных модулей для системы электронного обучения. Также в главе описаны основные результаты исследований по разработанным методикам.
 
@@ -248,7 +235,7 @@ $$
 
 На основе разработанных моделей и методик были реализованы программные модули, которые в своей комбинации формирую ядро системы электронного обучения ECOLE (Enhanced Course Ontology for Linked Education). Сервер системы ECOLE реализован на языке Java и основан на платформе Information Workbench. Платформа Information Workbench предоставляет функционал для работы с открытыми связными данными. Редактирование и управление RDF данными системы реализовано с использованием платформы OpenRDF Sesame. Сервер системы ECOLE предоставляет открытую точку доступа для SPARQL запросов. 
 
-Внешним интерфейсом системы дистанционного обучения ECOLE является система управления образованием Learning Management System (LMS). LMS обладает локальным хранилищем и производит управление пользовательскими данными, настройками и результатами обучения студентов. В LMS реализованы модули для отображения видео-лекций, слайдов, тестов и практических заданий. Внешний интерфейс получает с сервера данные по учебным материалам и отношения между объектами курса с помощью запросов к открытой точке доступа SPARQL. Персональные данные пользователей и настройки LMS хранятся в локальной памяти внешнего интерфейса. С помощью алгоритмов LMS производится сбор статистических данных по действиям студентов в системе и запись их в онтологии на сервере системы. LMS реализована на языке Python с использованием Django Web Framework. Общая архитектура системы электронного обучения ECOLE представлена на рисунке \ref{fig:OverallArch}.
+Внешним интерфейсом системы дистанционного обучения ECOLE является LMS. LMS обладает локальным хранилищем и производит управление пользовательскими данными, настройками и результатами обучения студентов. В LMS реализованы модули для отображения видеолекций, слайдов, тестов и практических заданий. Внешний интерфейс получает с сервера данные по учебным материалам и отношения между объектами курса с помощью запросов к открытой точке доступа SPARQL. Персональные данные пользователей и настройки LMS хранятся в локальной памяти внешнего интерфейса. С помощью алгоритмов LMS производится сбор статистических данных по действиям студентов в системе и запись их в онтологии на сервере системы. LMS реализована на языке Python с использованием Django Web Framework. Общая архитектура системы электронного обучения ECOLE представлена на рисунке \ref{fig:OverallArch}.
 
 
 
@@ -265,7 +252,7 @@ $$
 
 Основной набор данных системы дистанционного обучения ECOLE формировался вручную. Часть данных была создана с помощью методов наполнения онтологии описанных в главе 3. Набор данных системы состоит из объектов образовательного процесса, таких как курс, модуль, лекция, тест, практика, предметный термин, предметная область и книга. В результате применения разработанных методов агрегирования, в системе храниться 90 лекций, 587 предметных терминов в 8 предметных областях и 4094 книги и публикации из электронных библиотек.   
 
-Результаты работы алгоритмов обработки естественного языка по извлечению предметных терминов из тестов представлены в таблице \ref{table:2}. С одной стороны с терминами было связано 95\% заданий тестов. С другой стороны более 50\% терминов курса остались не связанными с заданиями тестов. Одной из причин данного явления является косвенное употребление предметных терминов в задании.
+Результаты работы алгоритмов обработки естественного языка по извлечению предметных терминов из тестов представлены в таблице \ref{table:2}. С одной стороны с терминами было связано 95\% заданий тестов. С другой стороны более 50\% терминов курса остались не связанными с заданиями тестов. Одной из причин данного явления является косвенное употребление предметных терминов в тексте задания.
 
 \begin{table}[h!]
 \centering
@@ -302,11 +289,12 @@ $$
 
 %\newpage
 
-\subsection*{\Large Научные работы по теме диссертации}
-% \renewcommand{\refname}{Научные работы в изданиях, рекомендованных ВАК:}
-% \nocite{*}
-% \bibliography{biblio}
-
-\renewcommand{\refname}{Другие научные работы:}
+%\subsection*{\Large Научные работы по теме диссертации}
+%\renewcommand{\refname}{Научные работы в изданиях, рекомендованных ВАК:}
+\renewcommand{\refname}{Научные работы по теме диссертации}
 \nocite{*}
 \bibliography{biblio}
+
+%\renewcommand{\refname}{Другие научные работы:}
+%\nocite{*}
+%\bibliography{biblio}
