--- a/biblio.bib
+++ b/biblio.bib
@@ -42,3 +42,20 @@
   booktitle = {Semantic Web Evaluation Challenge},
   year = {2014}
 }
+
+@ARTICLE{biba6,
+  author = {Стафеев С.К., Муромцев Д.И., Козлов Ф.А.},
+  title = {ECOLE - Семантический агрегатор открытых образовательных ресурсов // Компьютерные инструменты в образовании},
+  journal = {Компьютерные инструменты в образовании},
+  year = {2015},
+  volume = {1},
+  pages = {51-62}
+}
+
+
+@CONFERENCE{biba7,
+  author = {Mouromtsev D. Kozlov F. Kovriguina L. Parkhimovich O.},
+  title = {ECOLE: Student Knowledge Assessment in the Education Process},
+  booktitle = {WWW 2015 Proceedings},
+  year = {2015 (в печати)}
+}
