--- a/data.tex
+++ b/data.tex
@@ -2,7 +2,7 @@
 \newcommand{\thesisAuthor}             % Диссертация, ФИО автора
 {\todo{Козлов Федор Алексеевич}}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\todo{Разработка распределенной системы дистанционного обучения с репликацией потоковых данных и повышенной отказоустойчивостью}}
+{\todo{Методы агрегирования и анализа данных в системах электронного обучения с использованием семантических технологий}}
 \newcommand{\thesisSpecialtyNumber}    % Диссертация, специальность, номер
 {\todo{05.13.06}}
 \newcommand{\thesisSpecialtyTitle}     % Диссертация, специальность, название
